# sentencepiece_proto

./: CMakeLists.txt  README.md
src/: main.cpp
src/builtin_pb/: sentencepiece_model.pb.cc  sentencepiece_model.pb.h
